--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -173,6 +173,7 @@ input {
 
 #error_explanation {
   color: #f00;
+
   ul {
     list-style: none;
     margin: 0 0 18px 0;
@@ -182,4 +183,21 @@ input {
 .field_with_errors {
   @extend .control-group;
   @extend .error;
+}
+
+/* users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+    }
+  }
 }
